Fixed z-index of navigation bar

--- a/css/styles.css
+++ b/css/styles.css
@@ -77,7 +77,7 @@ p, li {
   position: fixed;
   width: 100%;
   top: 0;
-  z-index: 1;
+  z-index: 10;
 }
 
 .navbar {
